# italiclas

./: .env.app  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Makefile.common.mk  Makefile.docker.mk  Makefile.py.mk  README.md  TODO.md  docker-compose.yaml  openapi.yaml  pyproject.toml
infra/container/: Dockerfile
infra/perf/: __init__.py  locustfile.py
playground/: sid.ipynb  sid.py
src/italiclas/: config.py  logger.py
src/italiclas/api/: __init__.py  gen_openapi.py  main.py
src/italiclas/api/models/: __init__.py  payloads.py  responses.py
src/italiclas/api/routers/: ping.py  predict.py
src/italiclas/cli/: __init__.py  main.py
src/italiclas/etl/: __init__.py  clean_data.py  fetch_raw_data.py  preprocess_raw_data.py  raw_data.py
src/italiclas/ml/: __init__.py  model.py  optim.py  pipeline.py  predict.py  prediction.py  train.py  training.py
src/italiclas/utils/: core.py  misc.py  stopwatch.py
tests/: conftest.py
tests/functional/: test_cli_main.py
tests/integration/: test_api_endpoint_ping.py  test_api_endpoint_predict.py
tests/load/: __init__.py  test_api_endpoint_ping.py  test_api_endpoint_predict.py
tests/unit/: test_api_models.py  test_etl_clean_data.py  test_etl_raw_data.py  test_ml_model.py  test_ml_optim.py  test_ml_prediction.py  test_ml_training.py  test_utils_stopwatch.py
