[tool.poetry]
name = "italiclas"
version = "0.0.0"
description = "*Itali*an *Clas*sifier: A simple classifier for the Italian language."
authors = ["Riccardo Metere <riccardo@metere.it>"]
license = "GNU Public License v3 (GPLv3)"
readme = "README.md"

[tool.poetry.scripts]
italiclas = "italiclas.cli.main:main"
italiclas_etl_raw_data = "italiclas.etl.raw_data:main"
italiclas_etl_clean_data = "italiclas.etl.raw_data:main"
italiclas_ml_optim = "italiclas.ml.optim:main"
italiclas_ml_training = "italiclas.ml.training:main"
italiclas_ml_prediction = "italiclas.ml.prediction:main"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.2"
numba = "^0.60.0"
scipy = "^1.14.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
rich = "^13.9.4"
requests = "^2.32.3"
pyyaml = "^6.0.2"

[tool.poetry.group.api.dependencies]
fastapi = "^0.115.4"
uvicorn = "^0.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
coverage = "^7.6.4"
ruff = "^0.7.2"
mypy = "^1.13.0"
mypy-extensions = "^1.0.0"
pyright = "^1.1.388"
jupyter = "^1.1.1"
httpx = "^0.27.2"
locust = "^2.32.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = 'py312'
exclude = ["*.ipynb", "playground/*"]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]
